# drf-jwt-httponly-cookie

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
backend/: schema.yml
backend/accounts/: apps.py  authentication.py  jwt.py  schema.py  urls.py
backend/accounts/serializers/: __init__.py  login.py  user.py
backend/accounts/views/: __init__.py  csrf.py  login.py  logout.py  refresh_token.py  user.py
backend/core/: urls.py
backend/core/settings/: base.py  local.py
compose/local/: Dockerfile  start-django
